--- a/ilof/pom.xml
+++ b/ilof/pom.xml
@@ -11,6 +11,11 @@
         <artifactId>kafka-streams</artifactId>
         <version>3.2.1</version>
     </dependency>
+    <dependency>  
+        <groupId>org.javatuples</groupId>  
+        <artifactId>javatuples</artifactId>  
+        <version>1.2</version>  
+    </dependency> 
   </dependencies>
   <build>
     <plugins>
