--- a/ilof/pom.xml
+++ b/ilof/pom.xml
@@ -19,7 +19,12 @@
         <groupId>org.javatuples</groupId>
         <artifactId>javatuples</artifactId>
         <version>1.2</version>  
-    </dependency> 
+    </dependency>
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>31.1-jre</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
