figuring out topology/code structure

--- a/.env
+++ b/.env
@@ -3,15 +3,15 @@ KAFKA_BROKER="localhost:9092"
 SOURCE_TOPIC="mouse-source-topic"
 SINK_TOPIC="mouse-sink-topic"
 SINK_FILE="mouse-outliers.txt"
-ALGORITHM="ILOF"
+ALGORITHM="ILOF" # ILOF, RLOF...
 k=3
 topN=10
-LOF_THRESHOLD=2
-DISTANCE_MEASURE="EUCLIDEAN"
+LOF_THRESHOLD=2.0
+DISTANCE_MEASURE="EUCLIDEAN" # EUCLIDEAN, MANHATTAN
 WINDOW=50
 HYPERPLANES=5
 VIRTUAL_POINTS=4
 INLIER_PERCENTAGE=10
 MAX_AGE=100
 DIMENSIONS=2
-ANNS="LSH"
+ANNS="LSH" # FLAT, LSH
