--- a/rtlofs/driver/pom.xml
+++ b/rtlofs/driver/pom.xml
@@ -41,6 +41,10 @@
         <groupId>capstone</groupId>
         <artifactId>common</artifactId>
     </dependency>
+    <dependency>
+        <groupId>capstone</groupId>
+        <artifactId>ilof</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
