--- a/rtlofs/pom.xml
+++ b/rtlofs/pom.xml
@@ -53,6 +53,11 @@
         <artifactId>common</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>capstone</groupId>
+        <artifactId>ilof</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
   </dependencies>
   </dependencyManagement>
 
