--- a/rtlofs/common/pom.xml
+++ b/rtlofs/common/pom.xml
@@ -20,7 +20,10 @@
   </properties>
 
   <dependencies>
-
+    <dependency>  
+        <groupId>org.javatuples</groupId>
+        <artifactId>javatuples</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
