still trying to structure project

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,17 +1,21 @@
-KAFKA_APP_ID="rt-lof-application"
-KAFKA_BROKER="localhost:9092"
-SOURCE_TOPIC="mouse-source-topic"
-SINK_TOPIC="mouse-sink-topic"
-SINK_FILE="mouse-outliers.txt"
-ALGORITHM="ILOF" # ILOF, RLOF...
+KAFKA_APP_ID=rt-lof-application
+KAFKA_BROKER=localhost:9092
+SOURCE_TOPIC=mouse-source-topic
+SINK_TOPIC=mouse-sink-topic
+SINK_FILE=../../mouse-outliers.txt
+# ILOF, RLOF...
+ALGORITHM=ILOF
 k=3
-topN=10
+TOP_N_OUTLIERS=10
+TOP_PERCENT_OUTLIERS=5
 LOF_THRESHOLD=2.0
-DISTANCE_MEASURE="EUCLIDEAN" # EUCLIDEAN, MANHATTAN
+# EUCLIDEAN, MANHATTAN
+DISTANCE_MEASURE=EUCLIDEAN
 WINDOW=50
 HYPERPLANES=5
 VIRTUAL_POINTS=4
 INLIER_PERCENTAGE=10
 MAX_AGE=100
 DIMENSIONS=2
-ANNS="LSH" # FLAT, LSH
+# FLAT, LSH
+ANNS=LSH
