--- a/rtlofs/driver/pom.xml
+++ b/rtlofs/driver/pom.xml
@@ -44,6 +44,10 @@
         <groupId>capstone</groupId>
         <artifactId>ilof</artifactId>
     </dependency>
+    <dependency>
+        <groupId>capstone</groupId>
+        <artifactId>rlof</artifactId>
+    </dependency>
   </dependencies>
 
     <build>
