--- a/rtlofs/rlof/pom.xml
+++ b/rtlofs/rlof/pom.xml
@@ -36,6 +36,10 @@
         <groupId>capstone</groupId>
         <artifactId>common</artifactId>
       </dependency>
+      <dependency>
+        <groupId>io.github.cdimascio</groupId>
+        <artifactId>dotenv-java</artifactId>
+      </dependency>
   </dependencies>
 
     <build>
