flesh out rlof, scaffold clof

--- a/rtlofs/pom.xml
+++ b/rtlofs/pom.xml
@@ -123,5 +123,6 @@
     <module>driver</module>
     <module>ilof</module>
     <module>rlof</module>
+    <module>clof</module>
   </modules>
 </project>
