--- a/rtlofs/clof/pom.xml
+++ b/rtlofs/clof/pom.xml
@@ -8,45 +8,22 @@
   </parent>
 
   <groupId>capstone</groupId>
-  <artifactId>rlof</artifactId>
+  <artifactId>clof</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>rlof</name>
+  <name>clof</name>
 
   <properties>
-    <exec.mainClass>RLOF</exec.mainClass>
+    <exec.mainClass>CLOF</exec.mainClass>
     <jdk.version>1.8</jdk.version>
   </properties>
 
   <dependencies>
-    <dependency>
-        <groupId>org.apache.kafka</groupId>
-        <artifactId>kafka-streams</artifactId>
-      </dependency>
-      <dependency>  
-          <groupId>org.javatuples</groupId>
-          <artifactId>javatuples</artifactId>
-      </dependency>
-      <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>capstone</groupId>
-        <artifactId>common</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>capstone</groupId>
-        <artifactId>ilof</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>io.github.cdimascio</groupId>
-        <artifactId>dotenv-java</artifactId>
-      </dependency>
+    
   </dependencies>
 
-    <build>
+  <build>
       <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -87,4 +64,5 @@
         </plugin>
       </plugins>
   </build>
+
 </project>
