--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -12,9 +12,15 @@ LOF_THRESHOLD=2.0
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=EUCLIDEAN
 WINDOW=50
-HYPERPLANES=5
+# |Hyperplanes|=|bits|, but TarsosLSH uses a fixed value of 12
+# HYPERPLANES=5
+# TarsosLSH does require numberOfHashes (number of hash functions)
+# and numberOfHashTables
+HASHES=1
+HASHTABLES=1
 VIRTUAL_POINTS=4
 INLIER_PERCENTAGE=10
+# MAX_AGE needs to be much higher than this.
 MAX_AGE=100
 DIMENSIONS=2
 # FLAT, LSH
