fix some folder structure

--- a/rtlofs/ilof/pom.xml
+++ b/rtlofs/ilof/pom.xml
@@ -41,7 +41,7 @@
       <artifactId>dotenv-java</artifactId>
     </dependency>
     <dependency>
-        <groupId>capstone</groupId>
+        <groupId>be.tarsos.lsh</groupId>
         <artifactId>lsh</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
