--- a/rtlofs/common/pom.xml
+++ b/rtlofs/common/pom.xml
@@ -23,7 +23,12 @@
     <dependency>  
         <groupId>org.javatuples</groupId>
         <artifactId>javatuples</artifactId>
-      </dependency>
+    </dependency>
+    <dependency>
+        <groupId>be.tarsos.lsh</groupId>
+        <artifactId>lsh</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
