--- a/rtlofs/lsh/pom.xml
+++ b/rtlofs/lsh/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>capstone</groupId>
+  <groupId>be.tarsos.lsh</groupId>
   <artifactId>lsh</artifactId>
   <version>1.0-SNAPSHOT</version>
 
