--- a/rtlofs/ilof/pom.xml
+++ b/rtlofs/ilof/pom.xml
@@ -45,6 +45,11 @@
         <artifactId>lsh</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+        <groupId>capstone</groupId>
+        <artifactId>rlof</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
