--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -6,6 +6,11 @@ SINK_FILE=../../mouse-outliers.txt
 # ILOF, RLOF...
 ALGORITHM=ILOF
 k=3
+# TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
+# e.g., KDDCup99: 494021
+TOTAL_POINTS=500
+# TOP_N_OUTLIERS is determined by the test dataset.
+# e.g.: mouse.csv: 10
 TOP_N_OUTLIERS=10
 TOP_PERCENT_OUTLIERS=5
 LOF_THRESHOLD=2.0
