progress on virtual points as neighbors

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -23,6 +23,7 @@ WINDOW=50
 # and numberOfHashTables
 HASHES=1
 HASHTABLES=1
+# Keep this 4!
 VIRTUAL_POINTS=4
 INLIER_PERCENTAGE=10
 # MAX_AGE needs to be much higher than this.
