--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -2,15 +2,15 @@ KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
 SOURCE_TOPIC=mouse-source-topic
 SINK_TOPIC=mouse-sink-topic
-SINK_FILE=../../mouse-outliers.txt
+SINK_FILE=sink.txt
 # ILOF, RLOF...
-ALGORITHM=ILOF
+ALGORITHM=RLOF
 k=3
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
-# e.g., KDDCup99: 494021
+# e.g., KDDCup99 10%: 494021
 TOTAL_POINTS=500
 # TOP_N_OUTLIERS is determined by the test dataset.
-# e.g.: mouse.csv: 10
+# e.g., mouse.csv: 10
 TOP_N_OUTLIERS=10
 TOP_PERCENT_OUTLIERS=5
 LOF_THRESHOLD=2.0
@@ -19,8 +19,7 @@ DISTANCE_MEASURE=EUCLIDEAN
 WINDOW=50
 # |Hyperplanes|=|bits|, but TarsosLSH uses a fixed value of 12
 # HYPERPLANES=5
-# TarsosLSH does require numberOfHashes (number of hash functions)
-# and numberOfHashTables
+# TarsosLSH does require numberOfHashes (number of hash functions) and numberOfHashTables
 HASHES=1
 HASHTABLES=1
 # Keep this 4!
@@ -30,4 +29,4 @@ INLIER_PERCENTAGE=10
 MAX_AGE=100
 DIMENSIONS=2
 # FLAT, LSH
-ANNS=LSH
+ANNS=FLAT
