--- a/rtlofs/lsh/pom.xml
+++ b/rtlofs/lsh/pom.xml
@@ -14,10 +14,10 @@
   <name>lsh</name>
 
   <properties>
-    <!-- TODO: fix java version here, maybe exec.mainClass too? -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <!-- <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target> -->
+    <jdk.version>1.8</jdk.version>
   </properties>
 
   <dependencies>
