--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -23,7 +23,8 @@ WINDOW=10
 HASHES=1
 HASHTABLES=1
 # Keep this 4!
-VIRTUAL_POINTS=4
+# Udate: no longer configurable.
+# VIRTUAL_POINTS=4
 INLIER_PERCENTAGE=10
 # MAX_AGE needs to be much higher than this.
 MAX_AGE=100
