virtual point work

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -23,7 +23,7 @@ WINDOW=10
 HASHES=1
 HASHTABLES=1
 # Keep this 4!
-# Udate: no longer configurable.
+# Update: no longer configurable.
 # VIRTUAL_POINTS=4
 INLIER_PERCENTAGE=10
 # MAX_AGE needs to be much higher than this.
