--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -4,7 +4,7 @@ SOURCE_TOPIC=mouse-source-topic
 SINK_TOPIC=mouse-sink-topic
 SINK_FILE=sink.txt
 # ILOF, RLOF...
-ALGORITHM=RLOF
+ALGORITHM=ILOF
 k=3
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021
