--- a/rtlofs/common/pom.xml
+++ b/rtlofs/common/pom.xml
@@ -29,6 +29,10 @@
         <artifactId>lsh</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
