--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,7 +1,8 @@
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
 SOURCE_TOPIC=mouse-source-topic
-SINK_TOPIC=mouse-sink-topic
+# SINK_TOPIC=mouse-sink-topic
+# TODO determine sink file name from config
 SINK_FILE=sink.txt
 # ILOF, RLOF...
 ALGORITHM=RLOF
@@ -12,8 +13,8 @@ TOTAL_POINTS=500
 # TOP_N_OUTLIERS is determined by the test dataset.
 # e.g., mouse.csv: 10
 TOP_N_OUTLIERS=10
-TOP_PERCENT_OUTLIERS=5
-LOF_THRESHOLD=2.0
+# TOP_PERCENT_OUTLIERS=5
+# LOF_THRESHOLD=2.0
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=EUCLIDEAN
 WINDOW=20
@@ -25,5 +26,6 @@ HASHTABLES=1
 INLIER_PERCENTAGE=10
 MAX_AGE=100
 DIMENSIONS=2
+# TODO rename to NNS
 # FLAT, LSH
 ANNS=FLAT
