--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,23 +1,23 @@
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
-SOURCE_TOPIC=mouse-source-topic
+SOURCE_TOPIC=dummy-topic
 # SINK_TOPIC=mouse-sink-topic
 # TODO determine sink file name from config
 SINK_FILE=sink.txt
 # ILOF, RLOF...
 ALGORITHM=RLOF
-k=3
+k=2
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021
-TOTAL_POINTS=500
+TOTAL_POINTS=7
 # TOP_N_OUTLIERS is determined by the test dataset.
 # e.g., mouse.csv: 10
-TOP_N_OUTLIERS=10
+TOP_N_OUTLIERS=4
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
 # EUCLIDEAN, MANHATTAN
-DISTANCE_MEASURE=EUCLIDEAN
-WINDOW=20
+DISTANCE_MEASURE=MANHATTAN
+WINDOW=8
 # |Hyperplanes|=|bits|, but TarsosLSH uses a fixed value of 12
 # HYPERPLANES=5
 # TarsosLSH does require numberOfHashes (number of hash functions) and numberOfHashTables
@@ -28,4 +28,4 @@ MAX_AGE=100
 DIMENSIONS=2
 # TODO rename to NNS
 # FLAT, LSH
-ANNS=FLAT
+ANNS=LSH
