build sink filename from config

--- a/rtlofs/common/pom.xml
+++ b/rtlofs/common/pom.xml
@@ -33,6 +33,10 @@
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
       </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
