--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,12 +1,11 @@
+## Kafka settings
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
 SOURCE_TOPIC=dummy-topic
-# SINK_TOPIC=mouse-sink-topic
-# TODO determine sink file name from config
-SINK_FILE=sink.txt
-# ILOF, RLOF...
-ALGORITHM=RLOF
-k=2
+
+## Dataset settings
+# dummy, mouse, kdd9910pc, shuttle, vowel, pendigit, etc.
+DATASET=dummy
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021
 TOTAL_POINTS=7
@@ -15,17 +14,25 @@ TOTAL_POINTS=7
 TOP_N_OUTLIERS=4
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
+DIMENSIONS=2
+
+## Generic LOF parameters
+# ILOF, RLOF
+ALGORITHM=RLOF
+k=2
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
-WINDOW=8
-# |Hyperplanes|=|bits|, but TarsosLSH uses a fixed value of 12
-# HYPERPLANES=5
-# TarsosLSH does require numberOfHashes (number of hash functions) and numberOfHashTables
-HASHES=1
-HASHTABLES=1
-INLIER_PERCENTAGE=10
-MAX_AGE=100
-DIMENSIONS=2
-# TODO rename to NNS
 # FLAT, LSH
 ANNS=LSH
+
+## LSH parameters
+# TarsosLSH requires number of hash functions and number of hashtables
+HASHES=1
+HASHTABLES=1
+
+## Summarization parameters
+WINDOW=8
+INLIER_PERCENTAGE=10
+
+## Age-based deletion parameters
+MAX_AGE=100
