--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,38 +1,81 @@
 ## Kafka settings
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
-SOURCE_TOPIC=dummy-topic
+# dummy-topic, mouse-source-topic, kdd9910pc-source-topic
+SOURCE_TOPIC=kdd9910pc-source-topic
 
 ## Dataset settings
 # dummy, mouse, kdd9910pc, shuttle, vowel, pendigit, etc.
-DATASET=dummy
+DATASET=kdd9910pc
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
-# e.g., KDDCup99 10%: 494021
-TOTAL_POINTS=7
+# e.g., KDDCup99 10%: 494021, sampled: 99921
+TOTAL_POINTS=99921
 # TOP_N_OUTLIERS is determined by the test dataset.
-# e.g., mouse.csv: 10
-TOP_N_OUTLIERS=4
+# e.g., mouse.csv: 10, kddsampled: 2643
+TOP_N_OUTLIERS=2643
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
+# mouse: 2, kdd: 41
 DIMENSIONS=2
 
 ## Generic LOF parameters
 # ILOF, RLOF
 ALGORITHM=RLOF
-k=2
+k=3
 # EUCLIDEAN, MANHATTAN
-DISTANCE_MEASURE=MANHATTAN
+DISTANCE_MEASURE=EUCLIDEAN
 # FLAT, LSH
 ANNS=LSH
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
-HASHES=1
-HASHTABLES=1
+HASHES=4
+HASHTABLES=4
 
 ## Summarization parameters
-WINDOW=8
+WINDOW=500
 INLIER_PERCENTAGE=10
 
 ## Age-based deletion parameters
-MAX_AGE=100
+MAX_AGE=1000
+
+# ## Kafka settings
+# KAFKA_APP_ID=rt-lof-application
+# KAFKA_BROKER=localhost:9092
+# # dummy-topic, mouse-source-topic, kdd9910pc-source-topic
+# SOURCE_TOPIC=mouse-source-topic
+
+# ## Dataset settings
+# # dummy, mouse, kdd9910pc, shuttle, vowel, pendigit, etc.
+# DATASET=mouse
+# # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
+# # e.g., KDDCup99 10%: 494021, sampled: 99921
+# TOTAL_POINTS=500
+# # TOP_N_OUTLIERS is determined by the test dataset.
+# # e.g., mouse.csv: 10, kddsampled: 2643
+# TOP_N_OUTLIERS=10
+# # TOP_PERCENT_OUTLIERS=5
+# # LOF_THRESHOLD=2.0
+# # mouse: 2, kdd: 41
+# DIMENSIONS=2
+
+# ## Generic LOF parameters
+# # ILOF, RLOF
+# ALGORITHM=RLOF
+# k=3
+# # EUCLIDEAN, MANHATTAN
+# DISTANCE_MEASURE=EUCLIDEAN
+# # FLAT, LSH
+# ANNS=LSH
+
+# ## LSH parameters
+# # TarsosLSH requires number of hash functions and number of hashtables
+# HASHES=4
+# HASHTABLES=4
+
+# ## Summarization parameters
+# WINDOW=50
+# INLIER_PERCENTAGE=10
+
+# ## Age-based deletion parameters
+# MAX_AGE=100
