--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -25,12 +25,12 @@ k=2
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
 # FLAT, LSH
-ANNS=FLAT
+ANNS=LSH
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
-HASHES=4
-HASHTABLES=4
+HASHES=1
+HASHTABLES=1
 
 ## Summarization parameters
 WINDOW=500
