--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -2,17 +2,17 @@
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
 # dummy-topic, mouse-source-topic, kdd9910pc-source-topic
-SOURCE_TOPIC=dummy-topic
+SOURCE_TOPIC=mouse-source-topic
 
 ## Dataset settings
 # dummy, mouse, kdd9910pc, shuttle, vowel, pendigit, etc.
-DATASET=dummy
+DATASET=mouse
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021, sampled: 99921
-TOTAL_POINTS=7
+TOTAL_POINTS=500
 # TOP_N_OUTLIERS is determined by the test dataset.
 # e.g., mouse.csv: 10, kddsampled: 2643
-TOP_N_OUTLIERS=4
+TOP_N_OUTLIERS=10
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
 # mouse: 2, kdd: 41
@@ -21,11 +21,11 @@ DIMENSIONS=2
 ## Generic LOF parameters
 # ILOF, RLOF
 ALGORITHM=ILOF
-k=2
+k=3
 # EUCLIDEAN, MANHATTAN
-DISTANCE_MEASURE=MANHATTAN
+DISTANCE_MEASURE=EUCLIDEAN
 # FLAT, LSH
-ANNS=LSH
+ANNS=FLAT
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
