fixes, get some mouse results

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -20,7 +20,7 @@ DIMENSIONS=2
 
 ## Generic LOF parameters
 # ILOF, RLOF
-ALGORITHM=ILOF
+ALGORITHM=RLOF
 k=3
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=EUCLIDEAN
@@ -30,7 +30,7 @@ ANNS=LSH
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
 HASHES=1
-HASHTABLES=3
+HASHTABLES=1
 
 ## Summarization parameters
 WINDOW=50
