cache hashcode to see if it helps, planning

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,40 +1,40 @@
 ## Kafka settings
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
-# dummy-topic, mouse-source-topic, kdd9910pc-source-topic
-SOURCE_TOPIC=mouse-source-topic
+# dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic
+SOURCE_TOPIC=
 
 ## Dataset settings
 # dummy, mouse, kdd9910pc, shuttle, vowel, pendigit, etc.
-DATASET=mouse
+DATASET=
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
-# e.g., KDDCup99 10%: 494021, sampled: 99921
-TOTAL_POINTS=500
+# e.g., KDDCup99 10%: 494021, sampled: 99921, shuttle: 14500
+TOTAL_POINTS=
 # TOP_N_OUTLIERS is determined by the test dataset.
-# e.g., mouse.csv: 10, kddsampled: 2643
-TOP_N_OUTLIERS=10
+# e.g., mouse.csv: 10, kddsampled: 2643, shuttle: 3022
+TOP_N_OUTLIERS=
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
 # mouse: 2, kdd: 41
-DIMENSIONS=2
+DIMENSIONS=
 
 ## Generic LOF parameters
 # ILOF, RLOF
-ALGORITHM=RLOF
-k=3
+ALGORITHM=
+k=
 # EUCLIDEAN, MANHATTAN
-DISTANCE_MEASURE=EUCLIDEAN
+DISTANCE_MEASURE=MANHATTAN
 # FLAT, LSH
-ANNS=LSH
+ANNS=
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
-HASHES=1
-HASHTABLES=1
+HASHES=4
+HASHTABLES=4
 
 ## Summarization parameters
-WINDOW=50
+WINDOW=1000
 INLIER_PERCENTAGE=10
 
 ## Age-based deletion parameters
-MAX_AGE=100
+MAX_AGE=2000
