a bunch of experiments i might have to redo

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,22 +1,22 @@
 ## Kafka settings
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
-# dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic
-SOURCE_TOPIC=wilt-topic
+# dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic, wilt-topic
+SOURCE_TOPIC=shuttle-topic
 
 ## Dataset settings
 # dummy, mouse, kdd9910pc, shuttle, wilt, etc.
-DATASET=wilt
+DATASET=shuttle
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021, sampled: 99921, shuttle: 14500, wilt: 4671
-TOTAL_POINTS=4671
+TOTAL_POINTS=14500
 # TOP_N_OUTLIERS is determined by the test dataset.
 # e.g., mouse.csv: 10, kddsampled: 2643, shuttle: 3022, wilt: 93
-TOP_N_OUTLIERS=93
+TOP_N_OUTLIERS=3022
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
-# mouse: 2, kdd: 41
-DIMENSIONS=5
+# mouse, dummy: 2, kdd: 41, shuttle: 9, wilt: 5
+DIMENSIONS=9
 
 ## Generic LOF parameters
 # ILOF, RLOF
@@ -29,8 +29,8 @@ ANNS=FLAT
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
-HASHES=4
-HASHTABLES=4
+HASHES=1
+HASHTABLES=1
 
 ## Summarization parameters
 WINDOW=1000
