--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -2,26 +2,26 @@
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
 # dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic, wilt-topic
-SOURCE_TOPIC=shuttle-topic
+SOURCE_TOPIC=wilt-topic
 
 ## Dataset settings
 # dummy, mouse, kdd9910pc, shuttle, wilt, etc.
-DATASET=shuttle
+DATASET=wilt
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021, sampled: 99921, shuttle: 14500, wilt: 4671
-TOTAL_POINTS=14500
+TOTAL_POINTS=4671
 # TOP_N_OUTLIERS is determined by the test dataset.
 # e.g., mouse.csv: 10, kddsampled: 2643, shuttle: 3022, wilt: 93
-TOP_N_OUTLIERS=3022
+TOP_N_OUTLIERS=93
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
 # mouse, dummy: 2, kdd: 41, shuttle: 9, wilt: 5
-DIMENSIONS=9
+DIMENSIONS=5
 
 ## Generic LOF parameters
 # ILOF, RLOF
 ALGORITHM=ILOF
-k=3
+k=20
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
 # FLAT, LSH
