last updated before report

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -2,30 +2,30 @@
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
 # dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic, wilt-topic
-SOURCE_TOPIC=mouse-source-topic
+SOURCE_TOPIC=wilt-topic
 
 ## Dataset settings
 # dummy, mouse, kdd9910pc, shuttle, wilt, etc.
-DATASET=mouse
+DATASET=wilt
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021, sampled: 99921, shuttle: 14500, wilt: 4671
-TOTAL_POINTS=500
+TOTAL_POINTS=4671
 # TOP_N_OUTLIERS is determined by the test dataset.
 # e.g., mouse.csv: 10, kddsampled: 2643, shuttle: 3022, wilt: 93
-TOP_N_OUTLIERS=10
+TOP_N_OUTLIERS=93
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
 # mouse, dummy: 2, kdd: 41, shuttle: 9, wilt: 5
-DIMENSIONS=2
+DIMENSIONS=5
 
 ## Generic LOF parameters
 # ILOF, RLOF
-ALGORITHM=ILOF
-k=10
+ALGORITHM=RLOF
+k=3
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=EUCLIDEAN
 # FLAT, LSH
-ANNS=FLAT
+ANNS=LSH
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
@@ -33,8 +33,8 @@ HASHES=1
 HASHTABLES=1
 
 ## Summarization parameters
-WINDOW=1000
-INLIER_PERCENTAGE=10
+WINDOW=500
+INLIER_PERCENTAGE=30
 
 ## Age-based deletion parameters
 MAX_AGE=2000
