add immunizer dataset

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -1,21 +1,21 @@
 ## Kafka settings
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
-# dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic, wilt-topic
+# dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic, wilt-topic, immunizer-topic
 SOURCE_TOPIC=wilt-topic
 
 ## Dataset settings
-# dummy, mouse, kdd9910pc, shuttle, wilt, etc.
+# dummy, mouse, kdd9910pc, shuttle, wilt, immunizer
 DATASET=wilt
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
-# e.g., KDDCup99 10%: 494021, sampled: 99921, shuttle: 14500, wilt: 4671
+# e.g., KDDCup99 10%: 494021, sampled: 99921, shuttle: 14500, wilt: 4671, immunizer: 5100
 TOTAL_POINTS=4671
 # TOP_N_OUTLIERS is determined by the test dataset.
-# e.g., mouse.csv: 10, kddsampled: 2643, shuttle: 3022, wilt: 93
+# e.g., mouse.csv: 10, kddsampled: 2643, shuttle: 3022, wilt: 93, immunizer: 78
 TOP_N_OUTLIERS=93
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
-# mouse, dummy: 2, kdd: 41, shuttle: 9, wilt: 5
+# mouse, dummy: 2, kdd: 41, shuttle: 9, wilt: 5, immunizer: 8
 DIMENSIONS=5
 
 ## Generic LOF parameters
