lsh from scratch

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -32,6 +32,10 @@ ANNS=LSH
 HASHES=2
 HASHTABLES=2
 
+# My LSH
+HYPERPLANES=4
+# and use HASHTABLES
+
 ## Summarization parameters
 WINDOW=918
 INLIER_PERCENTAGE=25
