--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -2,29 +2,29 @@
 KAFKA_APP_ID=rt-lof-application
 KAFKA_BROKER=localhost:9092
 # dummy-topic, mouse-source-topic, kdd9910pc-source-topic, shuttle-topic, wilt-topic, immunizer-topic
-SOURCE_TOPIC=immunizer-topic
+SOURCE_TOPIC=dummy-topic
 
 ## Dataset settings
 # dummy, mouse, kdd9910pc, shuttle, wilt, immunizer
-DATASET=immunizer
+DATASET=dummy
 # TOTAL_POINTS and TOP_N_OUTLIERS are only relevant for finite (test) data.
 # e.g., KDDCup99 10%: 494021, sampled: 99921, shuttle: 14500, wilt: 4671, immunizer: 5100
-TOTAL_POINTS=5100
+TOTAL_POINTS=7
 # TOP_N_OUTLIERS is determined by the test dataset.
 # e.g., mouse.csv: 10, kddsampled: 2643, shuttle: 3022, wilt: 93, immunizer: 78
-TOP_N_OUTLIERS=78
+TOP_N_OUTLIERS=4
 # TOP_PERCENT_OUTLIERS=5
 # LOF_THRESHOLD=2.0
 # mouse, dummy: 2, kdd: 41, shuttle: 9, wilt: 5, immunizer: 8
-DIMENSIONS=8
+DIMENSIONS=2
 
 ## Generic LOF parameters
 # ILOF, RLOF
-ALGORITHM=RLOF
-k=7
+ALGORITHM=ILOF
+k=2
 # EUCLIDEAN, MANHATTAN
-DISTANCE_MEASURE=EUCLIDEAN
-# FLAT, LSH
+DISTANCE_MEASURE=MANHATTAN
+# FLAT, LSH, TARSOS
 ANNS=LSH
 
 ## LSH parameters
