--- a/rtlofs/ilof/pom.xml
+++ b/rtlofs/ilof/pom.xml
@@ -45,11 +45,11 @@
         <artifactId>lsh</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
-    <!-- <dependency>
+    <dependency>
         <groupId>capstone</groupId>
-        <artifactId>rlof</artifactId>
+        <artifactId>kdtree</artifactId>
         <version>1.0-SNAPSHOT</version>
-    </dependency> -->
+    </dependency>
   </dependencies>
 
   <build>
