--- a/rtlofs/pom.xml
+++ b/rtlofs/pom.xml
@@ -126,5 +126,6 @@
     <module>clof</module>
     <!-- Joren Six (joren@0110.be), TarsosLSH, Accessed from https://github.com/JorenSix/TarsosLSH -->
     <module>lsh</module>
+    <module>kdtree</module>
   </modules>
 </project>
