--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -24,8 +24,8 @@ ALGORITHM=ILOF
 k=2
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
-# FLAT, LSH, TARSOS
-ANNS=LSH
+# FLAT, KD, LSH, TARSOS
+ANNS=KD
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
