--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -20,12 +20,12 @@ DIMENSIONS=2
 
 ## Generic LOF parameters
 # ILOF, RLOF
-ALGORITHM=ILOF
+ALGORITHM=RLOF
 k=2
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
 # FLAT, KD, LSH, TARSOS
-ANNS=KD
+ANNS=FLAT
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
@@ -37,8 +37,8 @@ HYPERPLANES=4
 # and use HASHTABLES
 
 ## Summarization parameters
-WINDOW=918
-INLIER_PERCENTAGE=25
+WINDOW=6
+INLIER_PERCENTAGE=33
 
 ## Age-based deletion parameters
-MAX_AGE=1530
+MAX_AGE=100
