--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -25,7 +25,7 @@ k=2
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
 # FLAT, KD, LSH, TARSOS
-ANNS=FLAT
+ANNS=KD
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
@@ -37,8 +37,8 @@ HYPERPLANES=4
 # and use HASHTABLES
 
 ## Summarization parameters
-WINDOW=6
+WINDOW=10
 INLIER_PERCENTAGE=0
 
 ## Age-based deletion parameters
-MAX_AGE=7
+MAX_AGE=10
