delete points from collections in mylsh or kd

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -25,7 +25,7 @@ k=2
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
 # FLAT, KD, LSH, TARSOS
-ANNS=LSH
+ANNS=KD
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
