rest of deletion (bad code but can't help it)

--- a/rtlofs/.env
+++ b/rtlofs/.env
@@ -25,7 +25,7 @@ k=2
 # EUCLIDEAN, MANHATTAN
 DISTANCE_MEASURE=MANHATTAN
 # FLAT, KD, LSH, TARSOS
-ANNS=KD
+ANNS=TARSOS
 
 ## LSH parameters
 # TarsosLSH requires number of hash functions and number of hashtables
@@ -37,7 +37,7 @@ HYPERPLANES=4
 # and use HASHTABLES
 
 ## Summarization parameters
-WINDOW=5
+WINDOW=10
 INLIER_PERCENTAGE=20
 
 ## Age-based deletion parameters
